--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    container_name: bankaccounts
+    container_name: bankaccount
     build: .
     ports:
       - "8000:8000"
